# vision

./: .clang-format  .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.txt
bench/: bench_wrapper.py
docs/: bt12.tex  bt2.aux  bt2.bbl  bt2.bcf  bt2.bib  bt2.fdb_latexmk  bt2.fls  bt2.out  bt2.run.xml  bt2.tex  entrega1.tex  references.bib
docs/figures/: compress.py
latex/: .gitignore
latex/entrega1/: entrega1.synctex(busy)  entrega1.tex  presentacion.tex  references.bib
notebooks/: BT1.ipynb  BT2.ipynb  borders_0.npy  bt2_script.py
notebooks/images/bt1/000014/: calibration.json  ego_motion.json  metadata.json
notebooks/images/bt1/000205/: info.json
notebooks/images/bt1/000247/: info.json
notebooks/images/bt1/020539/: ego_motion.json  info.json
notebooks/images/bt1/020541/: calibration.json  info.json  metadata.json
notebooks/images/bt1/020567/: ego_motion.json  info.json
notebooks/images/bt1/020578/: metadata.json
notebooks/images/bt1/020579/: calibration.json  (+2 more)
src/bench/: bench_wrapper.py
src/dgst/: __init__.py
src/dgst/ffi/: Makefile  __init__.py  box.c  canny.c  filters.c  filters.h  gaussian.c  kannala.c  ransac.c  wrapper.py
src/dgst/launcher/: filters.py
src/dgst/launchers/: test_processor.py
src/dgst/utils/: __init__.py  features.py  fuser.py  loader.py  processor.py  validation.py
src/mi_proyecto/utils/: helpers.py
src/tests/: test_box_filter.py  test_canny_filter.py  test_gaussian_filter.py  test_wrapper.py
tests/: __init__.py  conftest.py  test_modulo1.py  test_modulo2.py  test_wrapper.py
(+85 files in other folders)
