[tool.poetry]
name = "mi_proyecto"
version = "0.1.0"
description = "Ejemplo de proyecto reorganizado"
authors = ["Tu Nombre <tu@ejemplo.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
